<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        android:gravity="center_vertical">
        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:textSize="13sp"
            android:paddingStart="3dp"
            android:paddingEnd="3dp"
            />
        <TextView
            android:id="@+id/tv_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textColor="@android:color/darker_gray"
            android:textSize="13sp"
            android:paddingStart="3dp"
            android:paddingEnd="3dp"
            />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tv_lang"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lang"
                android:textColor="@android:color/holo_blue_bright"
                android:textSize="13sp"
                android:paddingStart="3dp"
                android:paddingEnd="3dp"
                android:layout_alignParentStart="true"
                />
        </RelativeLayout>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorAccent"
        android:layout_below="@+id/ll"
        android:visibility="gone"
        />
</RelativeLayout>