<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity"
    android:orientation="vertical"
    android:background="@color/colorPrimary">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.mancj.materialsearchbar.MaterialSearchBar
            style="@style/MaterialSearchBarLight"
            app:mt_hint="Search"
            app:mt_menuIconDrawable="@mipmap/ic_launcher"
            app:mt_placeholder="Trending Repositories"
            app:mt_placeholderColor="@android:color/black"
            app:mt_maxSuggestionsCount="10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/searchBar"
            android:layout_toEndOf="@id/ivLogo"/>
        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@mipmap/ic_launcher"
            android:padding="5dp"
            android:transitionName="logoTransition"
            tools:targetApi="lollipop"
            android:layout_marginEnd="-16dp"
            android:layout_alignParentStart="true"/>

    </RelativeLayout>
    <FrameLayout
        android:visibility="gone"
        android:id="@+id/fl_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/srl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_repos"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:listitem="@layout/list_item" />
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
    </FrameLayout>

    <LinearLayout
        android:id="@+id/ll_no_internet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:visibility="visible"
        android:background="@color/colorPrimaryDark"
        >


        <ImageView
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_gravity="center"
            android:src="@drawable/boss" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:text="@string/oops"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:text="@string/no_internet"
            android:textColor="@android:color/black"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:text="@string/please_check_your_network_connection" />

        <Button
            android:id="@+id/btn_try_again"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/try_again"
            android:layout_marginTop="3dp"
            android:textColor="@color/blue"
            android:textSize="15sp"
            android:textStyle="bold"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:background="@drawable/button_ripple_effect"
            />


    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_progress_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:visibility="visible"
        android:background="@color/colorPrimaryDark">
        <ProgressBar
            android:id="@+id/loading_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>
</LinearLayout>